on personal appropriation

--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -433,7 +433,8 @@ In ask/imagine stages parent and child are able  discuss storytelling, graphical
 <!-- NOTE:  this addresses HOW THESE FINDING ARE STRUCTURED. MOVE TO INTRO? -->
 
 
-The following sections focus in on the way design patterns used by parents, children and facilitators in this emerging game making community. To present findings from video data, I draw on the Rogoff's three planes of analysis for this chapter [@rogoff_observing_1995]. Acknowledging that these observation do not fall nearly into each of the three planes, I cover observation on the use of GDPs relating to, in turn, personal knowledge, interpersonal activity and finally cultural activities. The sections are also influenced by activity system elements, in particular the use of tools and the emerging community norms and concepts.
+The following sections focus on the way design patterns are used by parents, children and facilitators in this emerging game making community. To present findings from video data, I draw on the Rogoff's three planes of analysis [@rogoff_observing_1995] as explored in chapter 3. Acknowledging that these observation do not fall nearly into each of the three planes, I cover observation on the use of GDPs relating to, in turn, personal knowledge, interpersonal activity and finally cultural activities. The observation of these sections are also guided by concepts of the development of shared objects and meditational tools and strategies and their role in emerging community norms and practices.
+
 <!-- Design stages (as explored in chapter two) are also used to guide categorisation , although the discussion of this chapter points to a more complex pattern of design that those outlined in many design cycles. -->
 
 <!-- ### Using cultural, interpersonal & Personal Planes Analysis of use of GDPs
@@ -456,8 +457,7 @@ Toby to find patterns and to duplicate them in different situations.
 <!--
  Also the knowledge of the GDP helps ability to recognise patterns in the code. Left / right -> Up / Down -->
 
- - Facilitators can use existing and planned GDPs to surface computational, design and systems concepts embedded in games
- - participants appropriate concepts and feed them back into the community
+Facilitators can use a prepared collection of GDPs to facilitate participants to surface chosen computational, design and systems concepts embedded in games.
 
 In the previous chapter, the use of a map of learning dimension in the studies design was examined in relation to contextual tensions relating to the motivations surrounding of curriculum concepts.
 
@@ -475,21 +475,26 @@ This can help justify activities in formal contexts as per Bevan and Petrich's w
 
 <!-- , I could trust my instincts as a facilitator to not detract attention from participants following an organic and flexible pattern of implementation, self-testing, improvement and playtesting. -->
 
-I also noted my own caution about overloading learners with shifting and competing goals. My concern hinged on the potential disorientation of the learner that imposed shifts of focus may provoke. As learners shift between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern to narrower still of completing one of several actions to complete the implementation of a GDP. I was more interested in community aspects and appropriation of use of GDPs
+I also noted my own caution about overloading learners with shifting and competing goals. My concern hinged on the potential disorientation of the learner that imposed shifts of focus may provoke. As learners shift between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern to narrower still of completing one of several actions to complete the implementation of a GDP.
 
 <!-- In the language of activity theory the change of objective denotes is a shift in scope of the activity system. -->
 
-Following foundational literature of this study on CoP and CoL,  personal appropriation of practices and concepts is demonstrated in community activity through evolving peer practices.
-HOW exactly ?
-As explored previously pairs or individuals alternate between community playtesting and pair/individual design work. They share comments and the are guided in future design decisions by their interaction with the games of others.
 
-IS THIS RELATED TO GDPS AND PERSONAL APP?
-One to one instruction from facilitators was limited which encouraged the community to teach each other. The community of learners began to pitch in in their own ways and develop their own practices.
+**Participants appropriate such concepts and feed them back into the community.**
+
+This dimension is not fully explored in the thesis which has a greater focus on community and social aspects of use of GDPs.
+
+However, following Rogoff's interpretation the personal appropriation of concepts is demonstrated in community activity through evolving peer practices. As one-to-one instruction from facilitators was limited which encouraged the community to teach each other.
+
+NOTE - How exactly?
+
+As such I made note of some examples which demonstration of broad concepts of CT based on Resnick and Brennan's framework.  
+
+In
+
+
 
 <!-- Here learner agency is transformative not only of personal dimensions of learning but also the cultural setting, practices and tools available to learners. The process of playtesting other games allowed participants to share their on emerging interpretations of game making concepts like game feel and challenge without being directly taught. Further, the community sense of what is appropriate of fun evolves as mutually and therefore cannot be taught explicitly. -->
-
-
-
 
 <!-- Even, taking Wing's more abstract definition of CT, many examples arise in recorded interactions without being explicitly taught.
 
@@ -773,7 +778,7 @@ A later discussion section in this chapter illustrates a more complex interactio
 <!-- NOTE - DIVISION OF LABOUR IS IN THE NEXT CHAPTER TOO - REWRITE BASED ON GDP ONLY CONTENT
 CHECK FOR OVERLAP-->
 
-Participants split work between them and resolve problems in a variety of ways. GDPs feature in this process and other processes of division of labour are also relevant to the overall coding process.
+###### Participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work. Participants split work between them and resolve problems. GDPs feature in processes of division of labour in a variety of ways.
 
 
 #### Working knowledge of different types of GDPs can help participants to divide project elements by pattern
