--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -114,7 +114,7 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
 3. How can learners build agency in an evolving community of game makers?
 
 
-## Notes to restructure
+<!-- ## Notes to restructure
 
 Really address  the community aspect of the RQ - and highlight that this is why personal elements are not explored in more detail
 
@@ -122,13 +122,14 @@ In each section if there are multiple aspects of that then put into headings  - 
 
 Examine overlap of the cultural uses of GDP, and the next chapter - hand in hand here get an overview of what needs to extracted from the data and where it sits
 
-Also work out what to move to Lit Review - and restructure LT and Methodology based on two chapters near completion.
+Also work out what to move to Lit Review - and restructure LT and Methodology based on two chapters near completion. -->
 
 
 ## Chapter outline
 
-In the last chapter I outlined use of tools focusing on emerging tensions in activity on a micro-level. This chapter analyses this emergent activity at a mid-level scope between concrete tool use and the wider cultural context of the game making community. I focus on the implementation of individual game design patterns (GDPs) and in doing so addresses how data gathered informs thinking on the research question - _how can game design patterns support the development of coding practices by novices_?
-This chapter begins with re-examining of game design patterns and game play design patterns in the context of a community of novice coders. Following this a vignette of parent child interaction in game making process introduces an overview of interactions of that pair to help contextualise findings. The chapter then undertakes a systematic analysis of the use of game design patterns by participants drawing on detailed observations of practice. A discussion section explores implications and observations from these findings in relation to existing research and concepts. As part if this discussion, I draw on the examples of use of game design patterns in practice to explore the analysis of GDPs as a mid-level construct, of use both to designers and as a pedagogical tool for those seeking to help novice coders become inculcated into a coding community.
+In the last chapter I outlined use of tools focusing on emerging tensions in activity on a micro-level. Guided by Rogoff's concept of guided participation, this chapter analyses this emergent activity at a scope between concrete tool use and the wider cultural context of the game making community. I focus on the implementation of individual game design patterns (GDPs) and in doing so addresses how data gathered informs thinking on the research question - _how can game design patterns support the development of coding practices by novices_?
+
+This chapter begins with re-examining of game play design patterns as a unit of analysis for this research. Following this a vignette of parent child interaction in game making process helps contextualise findings. The chapter then undertakes a systematic analysis of varied uses of game design patterns by participants drawing on detailed observations of practice in recorded video data. A discussion section explores implications and observations from these findings in relation to existing research and concepts. As part of this discussion, I draw on the examples of use of game design patterns in practice to explore the analysis of GDPs as a mid-level construct, of use both to educational designers and researchers.
 
 <!-- This chapter builds towards a Matrix that could be included in a concluding chapter.
 https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit
@@ -457,19 +458,11 @@ Toby to find patterns and to duplicate them in different situations.
 <!--
  Also the knowledge of the GDP helps ability to recognise patterns in the code. Left / right -> Up / Down -->
 
-Facilitators can use a prepared collection of GDPs to facilitate participants to surface chosen computational, design and systems concepts embedded in games.
+Facilitators can use a prepared collection of GDPs to facilitate participants to surface chosen computational, design and systems concepts embedded in games. In the previous chapter, the use of a map of learning dimension in the studies design was examined in relation to contextual tensions relating to the motivations surrounding of curriculum concepts.
 
-In the previous chapter, the use of a map of learning dimension in the studies design was examined in relation to contextual tensions relating to the motivations surrounding of curriculum concepts.
 
-The process of reusing and modify code to create a computer game can surface both abstract and concrete computing concepts present in the concrete application of code that have emerged organically at different stages of the creative process. Especially Resnick's more concrete definitions.
-The repeated, solo, incremental changes of the details of implementation of game design patterns indicate a personal appropriation of concepts like game feel and challenge.
-EXAMPLE/S:
 
-However, while there is a lot of potential, building testable progress in  CT and other personal dimensions are not explored significantly in this study, but are explored extensively in other research as explored in the literature review.
-
-While this thesis focuses elsewhere the following observations from video data are in line with existing research in this area:
-- example one
-- Ex research support x and y from the other research.  
+While there is a lot of potential, building testable progress in  CT and other personal dimensions are not explored significantly in this study, but are explored extensively in other research as explored in the literature review.
 
 This can help justify activities in formal contexts as per Bevan and Petrich's work on tinkering. However, in this learning context the motivations of the learners both children and adults differ from  formal schooling setting and its requirements of teaching to a curriculum and potential exam content. Thus as there was no external imposition, and no organic desire to explore more abstract concepts.
 
@@ -486,11 +479,18 @@ This dimension is not fully explored in the thesis which has a greater focus on 
 
 However, following Rogoff's interpretation the personal appropriation of concepts is demonstrated in community activity through evolving peer practices. As one-to-one instruction from facilitators was limited which encouraged the community to teach each other.
 
-NOTE - How exactly?
 
-As such I made note of some examples which demonstration of broad concepts of CT based on Resnick and Brennan's framework.  
+The process of reusing and modify code to create a computer game can surface both abstract and concrete computing concepts present in the concrete application of code that have emerged organically at different stages of the creative process.
+The repeated, solo, incremental changes of the details of implementation of game design patterns indicate a personal appropriation of concepts like game feel and challenge and broad concepts of CT based on Resnick and Brennan's framework.
 
-In
+The following section outlines some examples:  
+
+EXAMPLE/S:
+
+BRIEF EXAMPLES FROM DATA FOLLOW
+
+Following Papert and subsequent research on Microworlds, learning designers shape what they want learners to encounter and explore [research on Microworlds]. While, this thesis focuses on community aspects in line with my own interests, I have written a chapter which explores There are significant possibilities to alter this design to suit more exploration of systems concepts and computational thinking.
+NOTE - INCLUDE REFERENCE TO CHAPTER
 
 
 
