Gdp as mediational strategy

--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -513,7 +513,7 @@ THIS SECTION NEEDS DEVELOPMENT AND COMPLEXIFICATION IN RELATION TO EXISTING RESE
 
 ## GDPs used in the process of guided participation
 
-This section explores data on the use of GDP from the perspective of interpersonal interaction the process of being guided into planned activity or peer work which is exploratory but helps developing of interpersonal processes which serve the completion of the activity. From observations of video data, I observe how GDPs are used as a meditational strategy by diverse participants.
+This section explores data on the use of GDP from the perspective of interpersonal interaction the process of being guided into planned activity or peer work which is exploratory but helps developing of interpersonal processes which serve the completion of the activity. From observations of video data, I observe how GDPs are used in diverse  meditational strategies by different participants.
 
 <!-- In particular how , ideation, division of labour and prioritisation, and the adoption of technical processes intersect with the use of GDPs. -->
 
