--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -528,28 +528,35 @@ This section examines the use of GDPs to facilitate guided participation via int
 
 <!-- DRAW ON CHAPTER 4 MUTUAL EVOLUTION - AND FIND EXAMPLES . -->
 
-**The use of a catalogue of design patterns increases participants choice. Supporting documentation underlies the technical implementation of code for the community. However, not all participants work from instructions**
+**The use of a catalogue of design patterns addresses a tension of participants choice and the need for documentation to support the technical implementation of code structures. However, not all participants used provided instructions and develop diverse ways to implement patterns.**
 
-- RECAP DOCUMENTATION TENSIONS HERE WITH FOCUS ON AGENCY
-- ALSO FOCUS ON MY ROLE AS A DESIGNER INTRODUCING DOCUMENTATION AND STRATEGIES (PERHAPS MAPS TOO IN LINE WITH 5TH D)
+<!-- - RECAP DOCUMENTATION TENSIONS HERE WITH FOCUS ON AGENCY
+- ALSO FOCUS ON MY ROLE AS A DESIGNER INTRODUCING DOCUMENTATION AND STRATEGIES (PERHAPS MAPS TOO IN LINE WITH 5TH D) -->
 
-The process of choice, use of documentation to support implementation was driven by my design decision to base supporting resources around GDPs. The vignette in chapter four outlined the process of Toby finding a GDP to implement and adding it to his game, and the example of this chapter shows the parent following the child's desire to implement a GDP shared in a mapping session.  At this phase of research documentation included; comment help within the game template; a step-by-step tutorial which build up the code of the starting template and explore the computing concepts, a menu of self-contained code examples of game elements game elements or game design patterns (GDPs); supporting tutorials briefly explaining how to add the new code needed to implement the patterns. The tutorials to implement GDPs were available online and also as printed A4 hand outs which were provided on request of the older participants.
+The tension between of participant choice and use and providing appropriate scaffolding materials to support implementation of code was explored in the previous chapter. The decision to base supporting resources around a menu of game design patterns was an end product of a mutual evolution.
 
-The previous chapter highlighted a tension between gulfs of technical understanding and my awareness of the perils of instruction-based approaches which privilege more abstract computing and coding concepts. The validity of tension is supported by research which encourages varied approaches beyond instruction-based approaches.
-MOVE FOLLOWING TO LIT REVIEW IF THIS POINT IS REALLY NEEDED HERE.
-[@dietz_design_2021; @resnick_coding_2020]. [SEE LIT REVIEW ON NON-TUTORIAL PEDAGOGIES]. Written instructions provide barriers of literacy and change of habit explored in previous studies [@blunden2014seeking]
+The vignette in this chapter shows the parent following the child's desire to implement a GDP using a step by step tutorial. The vignette of the chapter four showed Toby copying a code example which he chose from a graphical menu of patterns. The previous chapter also outlined the use of starting activities which selected key changes to code or simplified design processes designed to maximise personalisation and changes to the starting game template. These varied forms of scaffolding represent different approaches to supporting the process of making alterations to the code inline with a use-modify-create (UMC) approach.
 
-Direct help between peer participants, as outlined other section, was a key process of the game making community from early stages. Thus not all participants engaged with written tutorials. Therefore, while the pattern collection and the associated resources was my main guidance for this group process, it was not used by all participants.
+In addition to use of printed or online resources, this chapter will explore how varied forms of help between peer participants also became important process of the game making community from early stages.
 
 Later sections explore in more detail alternative strategies used to implement GDPs including:
 
-- linking to written instructions within the drama frame (provides greater incentive to engage in this way)
-- direct support from a family member
-- informal peer learning from wider community members
 
 While chapter 2 described research highlighting on the value of unstructured approaches to learning technology [ITO etc], the experience of P1 of the design showed the necessity for some scaffolding to support participants both technically and organisationally.
 
-The menu of GDPs fulfilled this need.
+
+The collection of GDPs acted as a base for  the variety of approach they shared.
+
+The following sections explore different uses of game design patterns.
+
+
+<!--
+At this phase of research documentation included; comment help within the game template; a step-by-step tutorial which build up the code of the starting template and explore the computing concepts, a menu of self-contained code examples of game elements game elements or game design patterns (GDPs); supporting tutorials briefly explaining how to add the new code needed to implement the patterns. -->
+
+DROP THIS SECTION IF IT DOESN'T FIT OR ISN'T COHERENT HERE
+The previous chapter highlighted a tension between gulfs of technical understanding and my awareness of the perils of instruction-based approaches which privilege more abstract computing and coding concepts. The validity of tension is supported by research which encourages varied approaches beyond instruction-based approaches.
+MOVE FOLLOWING TO LIT REVIEW IF THIS POINT IS REALLY NEEDED HERE.
+[@dietz_design_2021; @resnick_coding_2020]. [SEE LIT REVIEW ON NON-TUTORIAL PEDAGOGIES]. Written instructions provide barriers of literacy and change of habit explored in previous studies [@blunden2014seeking]
 
 
 <!-- In addition, Direct help between peer participants, as outlined other section, was a key process of the game making community from early stages.
