--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -537,26 +537,24 @@ The tension between of participant choice and use and providing appropriate scaf
 
 The vignette in this chapter shows the parent following the child's desire to implement a GDP using a step by step tutorial. The vignette of the chapter four showed Toby copying a code example which he chose from a graphical menu of patterns. The previous chapter also outlined the use of starting activities which selected key changes to code or simplified design processes designed to maximise personalisation and changes to the starting game template. These varied forms of scaffolding represent different approaches to supporting the process of making alterations to the code inline with a use-modify-create (UMC) approach.
 
-In addition to use of printed or online resources, this chapter will explore how varied forms of help between peer participants also became important process of the game making community from early stages.
+In addition to use of printed or online resources, this chapter will explore how varied forms of help between peer participants also became important process of the game making community from early stages.  Later sections explore varied strategies used to implement GDPs including, informal propagation of GDPs as a result of playtesting, the development of specialists division of labour and
 
-Later sections explore in more detail alternative strategies used to implement GDPs including:
-
-
-While chapter 2 described research highlighting on the value of unstructured approaches to learning technology [ITO etc], the experience of P1 of the design showed the necessity for some scaffolding to support participants both technically and organisationally.
+However, despite this variety, this chapter will explore how the evolving collection of GDPs acted as a base for the variety of approaches that emerged from it. To do this, the following sections explore different uses of game design patterns.
 
 
-The collection of GDPs acted as a base for  the variety of approach they shared.
+Key characteristics of structuring support around quick start activities and a subsequent menu of GDPs which align with existing research include:
 
-The following sections explore different uses of game design patterns.
+- supporting the value of informal approaches to learning technology [ITO etc] whilst avoiding the lack of support in P1 where participants called out for more support with technical and organisational processes.
+- providing shorter, just-in-time tutorials
+to reduce barriers associated with more extensive instruction-based approaches including barriers of literacy [@dietz_design_2021; @resnick_coding_2020].
 
 
 <!--
 At this phase of research documentation included; comment help within the game template; a step-by-step tutorial which build up the code of the starting template and explore the computing concepts, a menu of self-contained code examples of game elements game elements or game design patterns (GDPs); supporting tutorials briefly explaining how to add the new code needed to implement the patterns. -->
 
-DROP THIS SECTION IF IT DOESN'T FIT OR ISN'T COHERENT HERE
-The previous chapter highlighted a tension between gulfs of technical understanding and my awareness of the perils of instruction-based approaches which privilege more abstract computing and coding concepts. The validity of tension is supported by research which encourages varied approaches beyond instruction-based approaches.
-MOVE FOLLOWING TO LIT REVIEW IF THIS POINT IS REALLY NEEDED HERE.
-[@dietz_design_2021; @resnick_coding_2020]. [SEE LIT REVIEW ON NON-TUTORIAL PEDAGOGIES]. Written instructions provide barriers of literacy and change of habit explored in previous studies [@blunden2014seeking]
+
+The previous chapter highlighted a tension between gulfs of technical understanding and my awareness of the perils of instruction-based approaches which privilege more abstract computing and coding concepts. The validity of tension is supported by
+
 
 
 <!-- In addition, Direct help between peer participants, as outlined other section, was a key process of the game making community from early stages.
