--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -585,12 +585,9 @@ The design chapter explored the tension between reduced choice of genre of game.
 <!-- The reduction on the length of the course was welcome show by Ma's comment. "It did go on for too long." -->
 
 
-#### Problem solving practices as a fund of knowledge (but not really GDP)
+#### Knowledge of game design patterns used to stimulate and communicate new ideas
 
-In the following example home funds of knowledge are utilised not only in terms of home experiences of games but also in terms of design and problem solving practices. Dave  and Toby are working closely as a pair.
-
-Dave  invites thinking outside of the constraints of the suggested design early in this first session. The following interaction shows a rich interchange where the parent is trying to draw on the game playing experiences to promote innovation in the design of the existing template.
-
+In the following example home-base knowledge is utilised to help shape new design ideas and problem solving practices. Dave and Toby are working closely as a pair.  The following interaction shows a rich interchange where the parent is trying to draw on the game playing experiences to promote innovation in the design of the existing template.
 
 
 <!-- THIS IS STRONGLY LINKED WITH IDEATION - PERHAPS MOVE THERE. -->
@@ -601,10 +598,7 @@ Dave  invites thinking outside of the constraints of the suggested design early 
     Toby: Pause. I don’t know what to do thought.
     Dave: Well quite but what other games are there? again
 
-Thus in this example the family bring their knowledge of game play patterns and genre conventions and more broadly experience and a perspective of coding as a creative challenge to the activity.
-
-
-
+Dave invites thinking outside of the constraints of the suggested design early in this first session. In this example the family bring their knowledge of game play patterns and genre conventions and more broadly experience and a perspective of coding as a creative challenge to the activity.
 
 <!--
 The following exchange shows how the use of GDPs help participants navigate the professional practice of forking a codebase and the exploration of developer resources. Technically, he has the courage to divert from the existing game paradigm from platform to maze. Practically it brings up issues as many of the dominant game design patterns are different. Thus the first one they identify that of enemy following is not present in the current menu of choices.
@@ -654,7 +648,9 @@ My own positive response to their suggestion was driven partly from knowledge of
 
 #### Paper prototyping mapping visual matrix
 
-NOTE - PERHAPS MOVE THIS TO PREVIOUS CHAPTER / METHODS? NOT GDP SPECIFIC? OR PART OF STARTING DESIGN
+<!-- NOTE - PERHAPS MOVE THIS TO PREVIOUS CHAPTER / METHODS? NOT GDP SPECIFIC? OR PART OF STARTING DESIGN -->
+
+**Summary needed**
 
 The use of paper prototypes was one technique used by several parents to support their children to form and develop their design ideas. In our starting vignette the parent notices the child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly.
 
