--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -646,20 +646,21 @@ My own positive response to their suggestion was driven partly from knowledge of
  -->
 
 
-#### Paper prototyping mapping visual matrix
+#### The use of GDPs to encourage intuitive and visual prototyping
 
 <!-- NOTE - PERHAPS MOVE THIS TO PREVIOUS CHAPTER / METHODS? NOT GDP SPECIFIC? OR PART OF STARTING DESIGN -->
 
-**Summary needed**
+**Some GDPs allow the spacial exploration of design in a visual way that suits being mapped onto paper, or onto graphical software which allows for a similarly intuitive and rapid prototyping.**
 
-The use of paper prototypes was one technique used by several parents to support their children to form and develop their design ideas. In our starting vignette the parent notices the child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly.
+The use of paper prototypes was one technique used by several parents to support their children to form and develop their design ideas. In our starting vignette the matrix helped the child design with little coding or literacy ability.
+
+Later in their interactions the parent notices the child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly.
 
 ![](./Pictures/vign_a_1.png)
 ![Graphical representation of code]({{ site.baseurl }}/Pictures/vign_a_1.png)
 
 The way the code is structured has been chosen to allow a graphical analogue between the lines of code in the form of a comma separated array and the appearance of the resulting game output on the screen. The parent uses the graphical representation of design in the code template as a jumping off point to make a connection to home practice of sketching things out in paper. The process of turn the sketched into reality on the screen and sharing with others appears to be transformative in terms of the engagement level of the child.
 
-ADD IN A SUMMARY OF THE POST INTERVIEW DATA BELOW TO UNDERLINE THIS POINT.
 
 
 <!-- NOTE - RETURN TO THIS IN ANALYSIS OF TADS - -->
@@ -688,7 +689,7 @@ Later in the interaction, the parent outlines a different use of prototyping, th
 
     Mark:   Yeah. I think it's really important. I think the pencil and pen thing just didn't work did it. We sketched... It's got its place. But it's, the kids weren't that interested in using the graph paper to block out Piskel. It didn't translate. It was just easier to block it out straight in software. -->
 
-Another pair's ideation helped by the use of a GDPs is the following example which shows Toby and Dave  are creating a new tilemap for a maze game. Toby is able to map existing knowledge of tools and home knowledge of the kid of game he is imagining to rapidly make revisions.
+One pair's ideation helped by the use of a GDPs is the following example which shows Toby and Dave  are creating a new tilemap for a maze game. Toby is able to map existing knowledge of tools and home knowledge of the kid of game he is imagining to rapidly make revisions.
 
     Toby: Oo. Shall we try to make it (unintelligible). Cos in pac man you can go off the edge.
     Dave: and you wrap round the other way?
@@ -703,13 +704,15 @@ Another pair's ideation helped by the use of a GDPs is the following example whi
 
 As aligned with the learning design principle of rapid feedback, changes in the code which Toby is altering to impact on the new design pattern of a top down game, are immediately apparent in the preview window. As such, Toby does not feel the need to prototype on paper.
 
+NOTE - ADD IN A SUMMARY OF THE POST INTERVIEW DATA from Mark and Ed TO UNDERLINE THIS POINT.
+
+
 
 **Other examples of GPDs helping the ideation process**
 
 NOTE - TO DEVELOP AFTER MORE ANALYSIS OF VIDEO DATA.
 The use of GDPs to scaffold the ideation process was a common pattern used by X of the Y sessions analysed.
 
-In summary, some GDPs allow the spacial exploration of design in a way that suits being mapped onto paper, or onto graphical software which allows for a similar sketching experience.
 
 
 #### GDPs as used by participants in their prioritisation in the ideation process
