--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -711,6 +711,7 @@ NOTE - ADD IN A SUMMARY OF THE POST INTERVIEW DATA from Mark and Ed TO UNDERLINE
 **Other examples of GPDs helping the ideation process**
 
 NOTE - TO DEVELOP AFTER MORE ANALYSIS OF VIDEO DATA.
+
 The use of GDPs to scaffold the ideation process was a common pattern used by X of the Y sessions analysed.
 
 
@@ -779,7 +780,7 @@ A later discussion section in this chapter illustrates a more complex interactio
 <!-- NOTE - DIVISION OF LABOUR IS IN THE NEXT CHAPTER TOO - REWRITE BASED ON GDP ONLY CONTENT
 CHECK FOR OVERLAP-->
 
-###### Participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work. Participants split work between them and resolve problems. GDPs feature in processes of division of labour in a variety of ways.
+**Participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work. Participants split work between them and resolve problems. GDPs feature in processes of division of labour in a variety of ways.**
 
 
 #### Working knowledge of different types of GDPs can help participants to divide project elements by pattern
