--- a/_posts/thesis_chapters/tocs/2024-3-5-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-5-Gdps.md_toc.md
@@ -2,15 +2,19 @@
     really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
     -   [Research Questions - March
         2024](#research-questions---march-2024)
-    -   [Notes to restructure](#notes-to-restructure)
     -   [Chapter outline](#chapter-outline)
-    -   [On GDP as a germ-cell and unit of analysis - and chapter
-        outline](#on-gdp-as-a-germ-cell-and-unit-of-analysis---and-chapter-outline)
+    -   [On GDP as a germ-cell and unit of analysis recap of design
+        patterns](#on-gdp-as-a-germ-cell-and-unit-of-analysis-recap-of-design-patterns)
+        -   [Recap on design patterns and game design
+            patterns](#recap-on-design-patterns-and-game-design-patterns)
+        -   [On the utility of identifying a germ cell/ unit of
+            analysis](#on-the-utility-of-identifying-a-germ-cell-unit-of-analysis)
     -   [Study of Vignette A](#study-of-vignette-a)
         -   [Descriptive Commentary on Vignette
             A](#descriptive-commentary-on-vignette-a)
-    -   [Observations and analysis of use of Game Design Patterns by
-        participants](#observations-and-analysis-of-use-of-game-design-patterns-by-participants)
+    -   [Observations and analysis of use of Game Design Patterns (GDPs)
+        by
+        participants](#observations-and-analysis-of-use-of-game-design-patterns-gdps-by-participants)
     -   [The role of GDPs in the personal appropriation of
         computational, design and systems
         concepts](#the-role-of-gdps-in-the-personal-appropriation-of-computational-design-and-systems-concepts)
@@ -21,11 +25,11 @@
             tutorials](#gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
         -   [GDPs used to scaffold ideation
             processes](#gdps-used-to-scaffold-ideation-processes)
-            -   [Problem solving practices as a fund of knowledge (but
-                not really
-                GDP)](#problem-solving-practices-as-a-fund-of-knowledge-but-not-really-gdp)
-            -   [Paper prototyping mapping visual
-                matrix](#paper-prototyping-mapping-visual-matrix)
+            -   [Knowledge of game design patterns used to stimulate and
+                communicate new
+                ideas](#knowledge-of-game-design-patterns-used-to-stimulate-and-communicate-new-ideas)
+            -   [The use of GDPs to encourage intuitive and visual
+                prototyping](#the-use-of-gdps-to-encourage-intuitive-and-visual-prototyping)
             -   [GDPs as used by participants in their prioritisation in
                 the ideation
                 process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
