--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -19,11 +19,21 @@
                 structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
     -   [Conflicts and design tensions experienced by participants and
         facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
-        -   [Conflicts due to identity clashes and dysfunctional group
-            work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
         -   [Tensions due to lack of access and familiarity to game
             programming
             tools](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools)
+            -   [Design choices of the starter game
+                template](#design-choices-of-the-starter-game-template)
+                -   [Structural design of the game
+                    template](#structural-design-of-the-game-template)
+                -   [Variable editing for player
+                    movement](#variable-editing-for-player-movement)
+                -   [Level design and
+                    prototyping](#level-design-and-prototyping)
+                -   [Background colour and a pixel
+                    art](#background-colour-and-a-pixel-art)
+            -   [Observations on the game template and core
+                tools](#observations-on-the-game-template-and-core-tools)
         -   [Design adaptations to facilitate novice use of a code
             playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
             -   [Addressing code syntax
@@ -32,10 +42,6 @@
                 creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
             -   [Remixing and showcasing
                 projects](#remixing-and-showcasing-projects)
-            -   [Design choices of the starter game
-                template](#design-choices-of-the-starter-game-template)
-            -   [Observations on the game template and core
-                tools](#observations-on-the-game-template-and-core-tools)
         -   [Participant conflict associated with project navigation and
             use of
             documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
@@ -45,6 +51,8 @@
                 chapters](#structuring-instructional-tutorial-chapters)
             -   [Theming the a collection of game design patterns to aid
                 navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
+        -   [Conflicts due to identity clashes and dysfunctional group
+            work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
     -   [Chapter Discussion](#chapter-discussion)
         -   [Discussion on authenticity and agency concerning tools and
             resources](#discussion-on-authenticity-and-agency-concerning-tools-and-resources)
